test/classes/nilability/while-var-error-int.good
while-var-error-int.chpl:6: error: "while var/const" construct is available only on classes, here it is invoked on int(64)
